--- a/themes/festival/layouts/event/single.html
+++ b/themes/festival/layouts/event/single.html
@@ -8,7 +8,7 @@
 </div>
 <div class="container mt-4">
     <h3>{{.Title}}</h3>
-    <img src="{{ .Params.image | absURL }}" class="rounded img-fluid">
+    <img src="{{ .Params.image | relURL }}" class="rounded img-fluid">
     <div class="content">{{.Content}}</div>
 </div>
 {{ end }}
