--- a/themes/festival/layouts/_default/baseof.html
+++ b/themes/festival/layouts/_default/baseof.html
@@ -5,6 +5,9 @@
 
 <body>
     <main>
+        <div id="loading">
+            <div class="loader"></div>
+        </div>
         {{- block "hero" . }}{{ end }}
         <div id="content">
             {{- block "main" . }}{{- end }}
