--- a/themes/festival/layouts/_default/summary.html
+++ b/themes/festival/layouts/_default/summary.html
@@ -5,7 +5,7 @@
             <span class="card-title">{{.Title}}</span>
         </div>
         <div class="card-action">
-            <a href="{{.RelPermalink}}">さらに詳しく</a>
+            <a class="orange-text text-darken-3" href="{{.RelPermalink}}">さらに詳しく</a>
         </div>
     </div>
 </div>
