--- a/themes/festival/layouts/partials/head.html
+++ b/themes/festival/layouts/partials/head.html
@@ -7,5 +7,6 @@
     <link rel="stylesheet" href="/css/bootstrap-utilities.min.css">
     <link rel="stylesheet" href="/css/style.css">
     <script src="/js/materialize.min.js"></script>
+    <script src="/js/jquery-3.5.1.min.js"></script>
     <script src="/js/index.js"></script>
 </head>
