--- a/themes/festival/static/css/style.css
+++ b/themes/festival/static/css/style.css
@@ -35,7 +35,7 @@ img {
 
 .title {
   margin-top:25vh;
-  font-family: "Open Sans";
+  font-family: sans-serif;
   font-weight: 300;
   text-align: center;
   right: 0;
