--- a/themes/festival/layouts/event/single.html
+++ b/themes/festival/layouts/event/single.html
@@ -6,7 +6,7 @@
         </a>
     </div>
 </div>
-<div class="container mt-4">
+<div class="container mt-4 pb-5">
     <h3>{{.Title}}</h3>
     <img src="{{ .Params.image | relURL }}" class="rounded img-fluid">
     <div class="content">{{.Content}}</div>
