--- a/themes/festival/layouts/partials/head.html
+++ b/themes/festival/layouts/partials/head.html
@@ -1,7 +1,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
-    <title>Home | {{ .Site.Title }}</title>
+    <title>{{site.Title}}{{if not .IsHome}} | {{.Title}}{{end}}</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="/css/materialize.min.css">
     <link rel="stylesheet" href="/css/bootstrap-utilities.min.css">
