--- a/themes/festival/layouts/partials/header.html
+++ b/themes/festival/layouts/partials/header.html
@@ -2,7 +2,7 @@
     <div class="navbar-fixed">
         <nav class="white" role="navigation">
             <div class="nav-wrapper container">
-                <a id="logo-container" href="#" class="brand-logo"><img src="/img/logo-jp.svg"></a>
+                <a id="logo-container" href="/" class="brand-logo"><img src="/img/logo-jp.svg"></a>
                 <ul class="right hide-on-med-and-down">
                     {{ range .Site.Menus.main }}
                     <li><a href="{{ .URL }}">{{ .Name }}</a></li>
